--- a/languages/uk.json
+++ b/languages/uk.json
@@ -1,37 +1,37 @@
 {
-  "menu-index": "Home",
-  "menu-events": "Events",
+  "menu-index": "Головна",
+  "menu-events": "Події",
   "menu-chapters": "Chapters",
-  "menu-about": "About",
+  "menu-about": "Про нас",
   "menu-building-workshops": "Build",
-  "menu-host": "Host",
-  "footer-contact-header": "Contact",
-  "footer-contribute-header": "Contribute",
-  "footer-contribute-question": "Open an Issue",
-  "footer-contribute-answer": "Answer a Question",
-  "footer-about-header": "About",
+  "menu-host": "Організатор",
+  "footer-contact-header": "Контакти",
+  "footer-contribute-header": "Домопогти",
+  "footer-contribute-question": "Розказати про проблему",
+  "footer-contribute-answer": "Відповісти на запитання",
+  "footer-about-header": "Про нас",
   "footer-about-build": "Build a workshopper",
-  "footer-about-host": "Host a workshop",
+  "footer-about-host": "Організувати воркшоп",
   "index-header": "Open source workshops that teach web software skills. Do them on your own or at a workshop nearby.Get started by installing one of our core workshops or subscribe to our free email newsletter.",
   "index-get-started": null,
   "index-get-started-command": null,
   "index-workshop-header": "Workshops",
   "index-workshop-info": "These are in-person hosted workshops, usually free, in which workshoppers are used as curriculum and mentors help attendees work through the challenges.",
-  "index-workshop-links-host": "Host Your Own",
+  "index-workshop-links-host": "Організуйте власний",
   "index-workshop-links-events": "See All Events",
   "index-workshop-links-writeups": "Writeups of Past Events",
   "index-upcoming-header": "Upcoming Workshops",
-  "index-upcoming-loading": "Loading...",
-  "index-upcoming-error": "Could not load events, sorry!",
-  "index-upcoming-all-events": "See all events",
+  "index-upcoming-loading": "Зачекайте...",
+  "index-upcoming-error": "Вибачте, не вдалося завантажити дані!",
+  "index-upcoming-all-events": "Всі події",
   "index-upcoming-no-events": "No upcoming events. Check out",
   "index-upcoming-past-events": "past events",
   "index-upcoming-past-events2": "!",
-  "index-host-header": "Anyone can host",
-  "index-host-past": "There have been a total of",
-  "index-host-past2": "events!",
-  "index-host-want-to-host": "NodeSchool is decentralized, open source and volunteer run. Want to host an event?",
-  "index-host-want-to-host2": "Resources and tips",
+  "index-host-header": "Хто завгодно може організувати воркшоп,
+  "index-host-past": "Вже відбулося",
+  "index-host-past2": "воркшопів!",
+  "index-host-want-to-host": "NodeSchool - децентралізована, open source організація, що підтримується волонтерами. Хочете організувати воркшоп?",
+  "index-host-want-to-host2": "Ресурси і поради",
   "index-host-want-to-host3": "for how.",
   "index-workshopper-header": "Workshoppers",
   "index-workshopper-info": "Workshopper is the name used for the open source lesson modules associated with NodeSchool. All are self guided (you don't need to attend a workshop to do one) and most work offline.",
@@ -88,13 +88,13 @@
   "events-header2": "There have been many events!",
   "events-header3": "If you're organizing a NodeSchool event, add it to this site by filling out this form.",
   "chapters-header": "Cities all over have started to host NodeSchool events reguarly. Here's a list of chapters.",
-  "chapters-europe": "Europe",
-  "chapters-us": "US",
-  "chapters-latin-america": "Latin America",
-  "chapters-australia": "Australia",
-  "chapters-asia": "Asia",
-  "chapters-other": "Other region?",
-  "chapters-start": "You can not find a NodeSchool in your region? Maybe there are other people around you, who would \n            like to start one, too. Open an issue on the",
+  "chapters-europe": "Європа",
+  "chapters-us": "США",
+  "chapters-latin-america": "Латинська Америка",
+  "chapters-australia": "Австралія",
+  "chapters-asia": "Азія",
+  "chapters-other": "Інший регіон?",
+  "chapters-start": "Не можете знайти NodeSchool в вашому регіоні? Maybe there are other people around you, who would \n            like to start one, too. Open an issue on the",
   "chapters-start2": "discussions board",
   "chapters-start3": "to find other people around you. Then you can start your chapter by following the instructions on how to",
   "chapters-start4": "host an event",
@@ -122,15 +122,15 @@
   "building-workshops-info3A": null,
   "building-workshops-info3B": null,
   "building-workshops-info3C": null,
-  "host-header": "Hosting a NodeSchool Event",
+  "host-header": "Проведення NodeSchool воркшопа",
   "host-info": "NodeSchool is a fully community driven effort and is 100% open source. This means that anyone can use the NodeSchool materials and/or host an event.",
   "host-chapter-header": "First, create a chapter",
-  "host-chapter-info": "First you should",
+  "host-chapter-info": "Спочатку потрібно",
   "host-chapter-info2": ". Once that is done see below for resources about hosting your first event.",
   "host-chapter-info3": "This page is based loosely on the",
-  "host-chapter-info4": "discussion.",
+  "host-chapter-info4": "обговорення.",
   "host-chapter-link": "get a new NodeSchool Chapter set up",
-  "host-chapter-link2": "Want to run an event?",
+  "host-chapter-link2": "Хочете провести воркшоп?",
   "host-attend-header": "First, create a chapter",
   "host-attend-info": null,
   "host-attend-info2": null,
@@ -143,6 +143,6 @@
   "host-recommendation-list-4": null,
   "host-recommendation-list-5": null,
   "host-recommendation-list-6": null,
-  "host-reports-header": "Add Your Event!",
-  "host-reports-info": "If you're organizing a NodeSchool event, add it to this site by filling out this form."
+  "host-reports-header": "Додати подію",
+  "host-reports-info": "Якщо ви організуєте воркшоп NodeSchool, додайте його на сайт, заповнивши цю форму."
 }
