Add uk to language list, fix unclosed quotes

--- a/languages/languages.json
+++ b/languages/languages.json
@@ -5,5 +5,6 @@
   "zh-cn": "简体中文",
   "pt-br": "Português (Brasil)",
   "pt-pt": "Português (Europeu)",
-  "sv": "Svenska"
+  "sv": "Svenska",
+  "uk": "Українською"
 }
