--- a/languages/uk.json
+++ b/languages/uk.json
@@ -1,10 +1,10 @@
 {
   "menu-index": "Головна",
   "menu-events": "Події",
-  "menu-chapters": "Chapters",
+  "menu-chapters": "Філії",
   "menu-about": "Про нас",
   "menu-building-workshops": "Build",
-  "menu-host": "Організатор",
+  "menu-host": "Організаторам",
   "footer-contact-header": "Контакти",
   "footer-contribute-header": "Домопогти",
   "footer-contribute-question": "Розказати про проблему",
@@ -27,7 +27,7 @@
   "index-upcoming-no-events": "No upcoming events. Check out",
   "index-upcoming-past-events": "past events",
   "index-upcoming-past-events2": "!",
-  "index-host-header": "Хто завгодно може організувати воркшоп,
+  "index-host-header": "Хто завгодно може організувати воркшоп",
   "index-host-past": "Вже відбулося",
   "index-host-past2": "воркшопів!",
   "index-host-want-to-host": "NodeSchool - децентралізована, open source організація, що підтримується волонтерами. Хочете організувати воркшоп?",
