Dependant on fix fot header-top/header-bottom

--- a/languages/uk.json
+++ b/languages/uk.json
@@ -10,9 +10,10 @@
   "footer-contribute-question": "Розказати про проблему",
   "footer-contribute-answer": "Відповісти на запитання",
   "footer-about-header": "Про нас",
-  "footer-about-build": "Build a workshopper",
+  "footer-about-build": "Створити workshopper",
   "footer-about-host": "Організувати воркшоп",
-  "index-header": "Open source workshops that teach web software skills. Do them on your own or at a workshop nearby.Get started by installing one of our core workshops or subscribe to our free email newsletter.",
+  "index-header-top": "Воркшопи з відкритим початковим кодом, які вчать навичкам, необхідним для веб-розробки. Виконуйте їх наодинці або на воркшопі у вашому місті.",
+  "index-header-bottom": "Почніть з встановлення одного з <a class='big-link' href='#workshopper-list'>базових воркшопів</a> або підпишіться на <a class='big-link' href='https://tinyletter.com/nodeschool' target='_blank'>розсилку новин (англійською)</a>.",
   "index-get-started": null,
   "index-get-started-command": null,
   "index-workshop-header": "Workshops",
