--- a/languages/uk.json
+++ b/languages/uk.json
@@ -19,14 +19,14 @@
   "index-workshop-header": "Workshops",
   "index-workshop-info": "These are in-person hosted workshops, usually free, in which workshoppers are used as curriculum and mentors help attendees work through the challenges.",
   "index-workshop-links-host": "Організуйте власний",
-  "index-workshop-links-events": "See All Events",
-  "index-workshop-links-writeups": "Writeups of Past Events",
-  "index-upcoming-header": "Upcoming Workshops",
+  "index-workshop-links-events": "Переглянути всі події",
+  "index-workshop-links-writeups": "Звіти з минулих подій",
+  "index-upcoming-header": "Майбутні воркшопи",
   "index-upcoming-loading": "Зачекайте...",
   "index-upcoming-error": "Вибачте, не вдалося завантажити дані!",
   "index-upcoming-all-events": "Всі події",
-  "index-upcoming-no-events": "No upcoming events. Check out",
-  "index-upcoming-past-events": "past events",
+  "index-upcoming-no-events": "Немає запланованих подій. Переглянути",
+  "index-upcoming-past-events": "минулі події",
   "index-upcoming-past-events2": "!",
   "index-host-header": "Хто завгодно може організувати воркшоп",
   "index-host-past": "Вже відбулося",
@@ -35,12 +35,12 @@
   "index-host-want-to-host2": "Ресурси і поради",
   "index-host-want-to-host3": "for how.",
   "index-workshopper-header": "Workshoppers",
-  "index-workshopper-info": "Workshopper is the name used for the open source lesson modules associated with NodeSchool. All are self guided (you don't need to attend a workshop to do one) and most work offline.",
-  "index-workshopper-list-problem": "View Workshopper List",
-  "index-workshopper-list-faq": "Ask Questions if Stuck",
-  "index-workshopper-list-host": "Build a Workshop",
-  "index-get-going-header": "Get Going —",
-  "index-get-going-info": "You’ll need",
+  "index-workshopper-info": "Workshopper - назва, що використовується для позначення модулів занять видкритого ресурсу NodeSchool. Всі вони є незалежними та самокерованими (вам не потрібно відвідувати всі воркшопи, щоб скласти модуль) та більшість з них відбуваються офлайн.",
+  "index-workshopper-list-problem": "Переглянути список Workshopper",
+  "index-workshopper-list-faq": "Поставити запитання у разі потреби",
+  "index-workshopper-list-host": "Створити Workshop",
+  "index-get-going-header": "В процесі створення—",
+  "index-get-going-info": "Вам необхідно",
   "index-get-going-info2": "on your computer to get started\n    with each of these. Then use",
   "index-get-going-info3": "(it comes with Node) to install each\n    module with the command below it. Once installed,\n    simply type the workshopper’s name to launch.",
   "index-get-going-editor": "You will also need a",
@@ -51,9 +51,9 @@
   "index-get-going-editor6": ",",
   "index-get-going-editor7": ".",
   "index-workshoppers-core-header": "Core",
-  "index-workshoppers-core-info": "These workshoppers focus on essential skills for working with Node.js.",
+  "index-workshoppers-core-info": "Ці workshoppers фокусуються на необхідніх навічках для роботи з Node.js.",
   "index-workshoppers-core-link-pre": "Stuck? Ask a question in the",
-  "index-workshoppers-core-link-text": "discussion",
+  "index-workshoppers-core-link-text": "обговорення",
   "index-workshoppers-core-link-post": ".",
   "index-workshoppers-elective-header": "Electives",
   "index-workshoppers-elective-info": "Workshoppers on popular libraries or styles of writing Node.js.",
@@ -132,7 +132,7 @@
   "host-chapter-info4": "обговорення.",
   "host-chapter-link": "get a new NodeSchool Chapter set up",
   "host-chapter-link2": "Хочете провести воркшоп?",
-  "host-attend-header": "First, create a chapter",
+  "host-attend-header": "Для початку створіть розділ",
   "host-attend-info": null,
   "host-attend-info2": null,
   "host-attend-link": null,
