--- a/languages/uk.json
+++ b/languages/uk.json
@@ -51,7 +51,7 @@
   "index-get-going-editor6": ",",
   "index-get-going-editor7": ".",
   "index-workshoppers-core-header": "Core",
-  "index-workshoppers-core-info": "Ці workshoppers фокусуються на необхідніх навічках для роботи з Node.js.",
+  "index-workshoppers-core-info": "Ці workshoppers фокусуються на необхідних навичках для роботи з Node.js.",
   "index-workshoppers-core-link-pre": "Stuck? Ask a question in the",
   "index-workshoppers-core-link-text": "обговорення",
   "index-workshoppers-core-link-post": ".",
