--- a/languages/uk.json
+++ b/languages/uk.json
@@ -52,27 +52,27 @@
   "index-get-going-editor7": ".",
   "index-workshoppers-core-header": "Core",
   "index-workshoppers-core-info": "Ці workshoppers фокусуються на необхідних навичках для роботи з Node.js.",
-  "index-workshoppers-core-link-pre": "Stuck? Ask a question in the",
+  "index-workshoppers-core-link-pre": "Виникли труднощі? Запитати в ",
   "index-workshoppers-core-link-text": "обговорення",
   "index-workshoppers-core-link-post": ".",
   "index-workshoppers-elective-header": "Electives",
   "index-workshoppers-elective-info": "Workshoppers on popular libraries or styles of writing Node.js.",
-  "index-workshoppers-elective-link-pre": "Stuck? Ask a question in the",
+  "index-workshoppers-elective-link-pre": "Виникли труднощі? Запитати в",
   "index-workshoppers-elective-link-post": ".",
-  "index-workshoppers-elective-link-text": "discussion",
-  "workshopper-javascripting": "Learn the basics of JavaScript. No previous programming experience required.",
-  "workshopper-learnyounode": "Learn the basics of node: asynchronous i/o, http.",
+  "index-workshoppers-elective-link-text": "обговорення
+  "workshopper-javascripting": "Вивчити основи JavaScript. Попередній досвід в програмуванні не обов’язковий.",
+  "workshopper-learnyounode": "Вивчити основи node: асинхронний i/o, http.",
   "workshopper-learnyounode-command": "npm install -g learnyounode",
-  "workshopper-gitit": "Learn Git and GitHub basics.",
-  "workshopper-streamadventure": "Learn to compose streaming interfaces with",
+  "workshopper-gitit": "Вивчити основи Git та GitHub.",
+  "workshopper-streamadventure": "Навчитися створювати потокові інтерфейси з",
   "workshopper-streamadventure2": ".",
-  "workshopper-functionaljavascript": "Learn fundamental functional programming features of JavaScript in vanilla ES5.",
-  "workshopper-levelmeup": "Learn to use leveldb, a simple key/value store with a vibrant package.",
-  "workshopper-expressworks": "Learn the basics of the Express.js framework.",
-  "workshopper-makemehapi": "Learn all about hapi through a series of challenges.",
-  "workshopper-promise-it-wont-hurt": "Learn to use promises in JavaScript to handle async operations.",
-  "workshopper-async-you": "Learn to use the async package.",
-  "workshopper-nodebot-workshop": "Make robots with the johnny-five api.",
+  "workshopper-functionaljavascript": "Вивчити основні особливості функціонального програмування  на JavaScript (ES5).",
+  "workshopper-levelmeup": "Навчитися використовувати leveldb, простим key/value store with a vibrant package.",
+  "workshopper-expressworks": "Вивчити основи Express.js фреймворку.",
+  "workshopper-makemehapi": "Вивчити все про hapi крізь серію випробувань.",
+  "workshopper-promise-it-wont-hurt": "Навчитися використовувати promises в JavaScript для обробки асинхронних операцій.",
+  "workshopper-async-you": "Навчитися використовувати асинхронні пакети.",
+  "workshopper-nodebot-workshop": "Створювати роботів за допомогою johnny-five api.",
   "workshopper-goingnative": "An exploration of Node.js from the underside: native C++ add-ons.",
   "workshopper-planetproto": "Understanding JavaScript Prototypes",
   "workshopper-shader-school": "Learn the fundamentals of graphics programming using GLSL shaders.",
